--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ body .header nav a {
 body .news {
   width: 100%;
 }
-body .news img {
+body .news .img_n img {
   width: 100%;
 }
 body .news .content h1 {
@@ -181,6 +181,7 @@ body .actu-s .actu-i .content p {
   }
   body .header {
     grid-area: 1/1/2/4;
+    height: 100px;
   }
   body .header nav .mobile {
     display: none;
@@ -190,6 +191,13 @@ body .actu-s .actu-i .content p {
   }
   body .news {
     grid-area: 2/1/3/3;
+  }
+  body .news .img_n {
+    height: 45vh;
+    overflow: hidden;
+  }
+  body .news .img_n img {
+    transform: translateY(-20%);
   }
   body .news .content {
     display: flex;
