--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,17 +5,15 @@ $tr-color: #F1DEDE;
 @import url('https://fonts.googleapis.com/css2?family=Gravitas+One&family=Inter:wght@400;900&display=swap');
 
 body{
-    display: flex;
-    flex-direction: column;
-    align-items:center;
-    padding: 0;
-    margin: 0 5%;
-    width: 90%;
-    min-width: calc(350px - 10%);
-    font-family: 'Inter';
-    font-style: normal;
-    // margin: 0 5%;
+
+    display: grid;
+    grid-template-columns: repeat(2, calc(90% / 2));
+    grid-column-gap: 0;
+    grid-row-gap: 5vh;
+    justify-content: center;
+    justify-items: center;
     .header {
+        grid-area: 1 / 1 / 2 / 3;
         width: 100%;
         display: flex;
         justify-content: space-between;
@@ -74,10 +72,19 @@ body{
                 font-size: 17px;
                 line-height: 21px;
                 text-decoration: none;
+
+                &:after{
+                    
+                    width: 100%;
+                    height: 5px;
+                    content: ' ';
+                    transition: all 0.5s ease;
+                }
             }
         }
     }
     .news {
+        grid-area: 2 / 1 / 3 / 3;
         width: 100%;
         .img_n{
             img{
@@ -116,12 +123,11 @@ body{
         }
     }
     .actu-l{
+        grid-area: 3 / 1 / 4 / 3;
         background-color: $un-color;
         color: #ffffff;
         width: 90%;
-        padding: 5%;
-        margin: 10% 0;
-
+        padding: 0 5%;
         h1{
             color: $de-color;
             font-weight: 900;
@@ -144,6 +150,7 @@ body{
         }
     }
     .actu-s{
+        grid-area: 4 / 1 / 5 / 3;
         width: 100%;
         .actu-i{
             width: 100%;
@@ -186,6 +193,15 @@ body{
             }
         }
     }
+}
+
+@for $i from 1 through 3 {
+    .actu-s .actu-i:nth-child(#{$i}) h2::after{
+        content: "0"+$i;
+    }
+    // .actu-l .content:nth-child(#{$i}):after{
+    //     content: "";
+    // }
 }
 
 @media screen and (min-width: 1024px) {
@@ -238,7 +254,6 @@ body{
         .actu-l{
             grid-area: 2/3/3/4;
             height: 100%;
-            padding: 0 5%;
         }
         .actu-s{
             grid-area: 3 / 1 / 4 / 4;
