--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,20 +26,33 @@ body .header .logo {
 }
 body .header nav {
   position: relative;
-  width: 35vw;
+  width: 50px;
+  height: 35px;
   display: flex;
   justify-content: space-between;
   font-weight: 400;
   font-size: 17px;
   line-height: 21px;
   color: #333333;
+  cursor: pointer;
+}
+body .header nav:hover .mobile {
+  width: 10px;
+}
+body .header nav:hover .mobile::before {
+  width: 25px;
+}
+body .header nav:hover .mobile::after {
+  width: 50px;
 }
 body .header nav .mobile {
   position: absolute;
-  width: 40px;
+  width: 50px;
   height: 5px;
   right: 0;
+  top: 0px;
   background: #333333;
+  transition: all 0.5s ease;
 }
 body .header nav .mobile:before {
   content: "";
@@ -47,8 +60,9 @@ body .header nav .mobile:before {
   width: 40px;
   height: 5px;
   right: 0;
-  bottom: 15px;
+  top: 15px;
   background: #333333;
+  transition: all 0.5s ease;
 }
 body .header nav .mobile:after {
   content: "";
@@ -56,8 +70,9 @@ body .header nav .mobile:after {
   width: 20px;
   height: 5px;
   right: 0;
-  top: 15px;
+  top: 30px;
   background: #333333;
+  transition: all 0.5s ease;
 }
 body .header nav a {
   all: unset;
@@ -66,12 +81,22 @@ body .header nav a {
   font-size: 17px;
   line-height: 21px;
   text-decoration: none;
+  position: relative;
+  cursor: pointer;
 }
 body .header nav a:after {
-  width: 100%;
-  height: 5px;
+  width: 0%;
+  left: 50%;
+  height: 0.5vh;
   content: " ";
+  position: absolute;
+  background: #333;
+  bottom: -1vh;
   transition: all 0.5s ease;
+}
+body .header nav a:hover::after {
+  width: 110%;
+  left: -5%;
 }
 body .news {
   grid-area: 2/1/3/3;
@@ -200,6 +225,11 @@ body .actu-s .actu-i .content p {
   body .header {
     grid-area: 1/1/2/4;
     height: 100px;
+  }
+  body .header nav {
+    height: initial;
+    width: 40vw;
+    cursor: initial;
   }
   body .header nav .mobile {
     display: none;
