--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -31,20 +31,37 @@ body{
         }
         nav{
             position: relative;
-            width: 35vw;
+            width: 50px;
+            height: 35px;
             display: flex;
             justify-content: space-between;
             font-weight: 400;
             font-size: 17px;
             line-height: 21px;
             color: $un-color;
+            cursor: pointer;
 
+            &:hover{
+                .mobile{
+                    width:10px;
+
+                    &::before{
+                        width:25px;
+                    }
+                    &::after{
+                        width:50px;
+                    }
+                }
+            }
+            
             .mobile{
                 position: absolute;
-                width: 40px;
+                width: 50px;
                 height: 5px;
                 right: 0;
+                top: 0px;
                 background: $un-color;
+                transition: all 0.5s ease;
 
                 &:before{
                     content: '';
@@ -52,8 +69,9 @@ body{
                     width: 40px;
                     height: 5px;
                     right: 0;
-                    bottom: 15px;
+                    top: 15px;
                     background: $un-color;
+                    transition: all 0.5s ease;
                 }
                 &:after{
                     content: '';
@@ -61,8 +79,9 @@ body{
                     width: 20px;
                     height: 5px;
                     right: 0;
-                    top: 15px;
+                    top: 30px;
                     background: $un-color;
+                    transition: all 0.5s ease;
                 }
             }
             a{
@@ -72,13 +91,24 @@ body{
                 font-size: 17px;
                 line-height: 21px;
                 text-decoration: none;
+                position: relative;
+                cursor: pointer;
 
                 &:after{
-                    
-                    width: 100%;
-                    height: 5px;
-                    content: ' ';
+                    width: 0%;
+                    left: 50%;
+                    height: 0.5vh;
+                    content: " ";
+                    position: absolute;
+                    background: #333;
+                    bottom: -1vh;
                     transition: all 0.5s ease;
+                }
+                &:hover{
+                    &::after{
+                        width: 110%;
+                        left: -5%;
+                    }
                 }
             }
         }
@@ -220,6 +250,9 @@ body{
             grid-area: 1 / 1 / 2 / 4;
             height: 100px;
             nav {
+                height: initial;
+                width: 40vw;
+                cursor: initial;
                 .mobile{
                     display: none;
                 }
