--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,6 +12,9 @@ body{
     grid-row-gap: 5vh;
     justify-content: center;
     justify-items: center;
+    font-family: 'Inter';
+    font-style: normal;
+
     .header {
         grid-area: 1 / 1 / 2 / 3;
         width: 100%;
